took out buttons in HTML and made them dynamically added in JS, added score page and initials submit bar in JS with functioning logic. Made answers and questions populate with JS with incorrect and correct response and deduct time from timer if incorrect.

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <h2 id="header2">See how much you know about <em>the Office</em> and try to answer as many questions in the time thats given! Maybe you'll win a <em>dundee!</em>
         </h2>
     <div id="question-container1" class="hide">
-      <h2 id="question">Question</h2>
-        <a id="answer-buttons" class="answer-container">
-          <button class="btn">Answer 1</button>
-          <button class="btn">Answer 2</button>
-          <button class="btn">Answer 3</button>
-          <button class="btn">Answer 4</button>
-        </a>
+      <h3 id="question">Question</h3>
+        <a id="answer-buttons" class="answer-container"></a>
     </div>
 
       <div class="controls">
+        <div id="scorescreen" class="hide"><h1>END SCREEN</h1>
+          <h3>Congratulations Your Score Is:<span id="finalscore"></span></h3>
+          <input id="nameinput" placeholder="initials">
+            <button id="submitinitials">Submit</button>
+        </div>
         <button id="start-btn" class=" start-btn btn">Start</button> 
       </div>
     </div>
