final touches, fixed spelling mistakes in questions, took out unused button, added proper semantics to JS, added function to timer to end game when reaches 0

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div class="container">
       <div id="topbar" class="top">
-        <button id="highscores" class="scores">High Scores</button>
           <p id="time" class="timer">READY</p>
+          <p id="previousscore" class="previous">Previous High Score: </p>
       </div>
 
       <!-- header title and paragraph for the main start page -->
